2005-11-29  Darin Adler  <darin@apple.com>

        Reviewed by eseidel.  Landed by eseidel.

        Re-enabling hc_noderemovechild.xhtml and fixing bug (hang).
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5316

        * dom/xhtml/level1/core/hc_noderemovechild-expected.txt: Added.
        * dom/xhtml/level1/core/hc_noderemovechild.js: hang workaround.
        * dom/xhtml/level1/core/hc_noderemovechild.xhtml: Added.
        * dom/xhtml/level1/core/hc_noderemovechild.xhtml-disabled: Removed.

2005-11-28  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin. Commited by Maciej.

	- test case for http://bugzilla.opendarwin.org/show_bug.cgi?id=5715
	(document.charset, document.defaultCharset, and document.characterSet are not supported)

        * fast/dom/Document/document-charset-expected.txt: Added.
        * fast/dom/Document/document-charset.html: Added.

2005-11-28  Justin Garcia  <justin.garcia@apple.com>

        Fixed/added layout tests for:
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=5354>
        Corner case where you can select outside the bounds of an editable block.

        Reviewed by darin

        * editing/inserting/insert-div-023-expected.txt:
        * editing/pasteboard/paste-4035648-fix-expected.txt:
        * editing/selection/3690719-expected.checksum:
        * editing/selection/3690719-expected.png:
        * editing/selection/3690719-expected.txt:
        * editing/selection/leave-requested-block-expected.checksum: Added.
        * editing/selection/leave-requested-block-expected.png: Added.
        * editing/selection/leave-requested-block-expected.txt: Added.
        * editing/selection/leave-requested-block.html: Added.
        * editing/style/block-style-004-expected.txt:

2005-11-28  Justin Garcia  <justin.garcia@apple.com>
        
        I overlooked this layout test when fixing 4108909.

        * fast/forms/attributed-strings-expected.txt:

2005-11-27  Mitz Pettel  <opendarwin.org@mitzpettel.com>
